NULL =

desktopdir = $(pkgdatadir)/greeter/autostart
desktop_DATA = orca-autostart.desktop					\
	       caribou-autostart.desktop				\
	       $(NULL)

EXTRA_DIST =								\
	$(desktop_DATA)							\
	$(NULL)

MAINTAINERCLEANFILES =                  				\
        *~                              				\
        Makefile.in
